force-app/main/default/objects/Campaign/fields/Donors_Public_Final__c.field-meta.xml
<CustomField>
    <fullName>Donors_Public_Final__c</fullName>
    <label>Donors Public Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>