force-app/main/default/objects/Campaign/fields/Email_Reach__c.field-meta.xml
<CustomField>
    <fullName>Email_Reach__c</fullName>
    <label>Constituents Reached</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>