force-app/main/default/objects/Campaign/fields/Email_Supported__c.field-meta.xml
<CustomField>
    <fullName>Email_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email_Supported</label>
    <type>Checkbox</type>
</CustomField>