force-app/main/default/objects/Campaign/fields/HAM_Actual_Dollars__c.field-meta.xml
<CustomField>
    <fullName>HAM_Actual_Dollars__c</fullName>
    <label>Actual Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>