force-app/main/default/objects/Campaign/fields/HAM_Administrative_Division__c.field-meta.xml
<CustomField>
    <fullName>HAM_Administrative_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrative Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Administrative__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>