force-app/main/default/objects/Campaign/fields/HAM_Avg_Gift_Amt__c.field-meta.xml
<CustomField>
    <fullName>HAM_Avg_Gift_Amt__c</fullName>
    <label>Avg. Gift Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>