force-app/main/default/objects/Campaign/fields/HAM_Channel__c.field-meta.xml
<CustomField>
    <fullName>HAM_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Direct Mail</fullName>
                <isActive>false</isActive>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
                <isActive>false</isActive>
                <label>Mail</label>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Ringless Voicemail</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Special Action Code 2 (Channel)</fullName>
                <isActive>false</isActive>
                <label>Special Action Code 2 (Channel)</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>