force-app/main/default/objects/Campaign/fields/HAM_Chapel_Bell_Acquired__c.field-meta.xml
<CustomField>
    <fullName>HAM_Chapel_Bell_Acquired__c</fullName>
    <label>Chapel Bell Acquired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>