force-app/main/default/objects/Campaign/fields/HAM_Client__c.field-meta.xml
<CustomField>
    <fullName>HAM_Client__c</fullName>
    <label>Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advancement Services</fullName>
            </value>
            <value>
                <fullName>Alumni Relations</fullName>
            </value>
            <value>
                <fullName>Annual Giving</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Career Center</fullName>
            </value>
            <value>
                <fullName>Donor Relations</fullName>
            </value>
            <value>
                <fullName>Engagement Strategy</fullName>
            </value>
            <value>
                <fullName>Events and Promotions</fullName>
            </value>
            <value>
                <fullName>Foundations</fullName>
            </value>
            <value>
                <fullName>Individual Giving</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planned Giving</fullName>
            </value>
            <value>
                <fullName>President&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Prospect Research Strategy</fullName>
            </value>
            <value>
                <fullName>Information Services</fullName>
                <isActive>false</isActive>
                <label>Information Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>