force-app/main/default/objects/Campaign/fields/HAM_Dollars_Public_Goal__c.field-meta.xml
<CustomField>
    <fullName>HAM_Dollars_Public_Goal__c</fullName>
    <label>Dollars Public Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>