force-app/main/default/objects/Campaign/fields/HAM_Donor_Public_Goal__c.field-meta.xml
<CustomField>
    <fullName>HAM_Donor_Public_Goal__c</fullName>
    <label>Donor Public Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>