force-app/main/default/objects/Campaign/fields/HAM_Donors_Public_Announced__c.field-meta.xml
<CustomField>
    <fullName>HAM_Donors_Public_Announced__c</fullName>
    <label>Donor Public Announced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>