force-app/main/default/objects/Campaign/fields/HAM_Donors_Solicited__c.field-meta.xml
<CustomField>
    <fullName>HAM_Donors_Solicited__c</fullName>
    <label>Donors Solicited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>