force-app/main/default/objects/Campaign/fields/HAM_Email_Open_Rate_Avg__c.field-meta.xml
<CustomField>
    <fullName>HAM_Email_Open_Rate_Avg__c</fullName>
    <label>Email Open Rate Avg.</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>