force-app/main/default/objects/Campaign/fields/HAM_Email_Unsubscribes__c.field-meta.xml
<CustomField>
    <fullName>HAM_Email_Unsubscribes__c</fullName>
    <label>Email Unsubscribes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>