force-app/main/default/objects/Campaign/fields/HAM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>