force-app/main/default/objects/Campaign/fields/HAM_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Fiscal_Quarter__c</fullName>
    <label>Fiscal Quarter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>