force-app/main/default/objects/Campaign/fields/HAM_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>HAM_Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>