force-app/main/default/objects/Campaign/fields/HAM_Goal_Hamilton_Fund_Collected_Dollars__c.field-meta.xml
<CustomField>
    <fullName>HAM_Goal_Hamilton_Fund_Collected_Dollars__c</fullName>
    <label>Goal Hamilton Fund Collected Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>