force-app/main/default/objects/Campaign/fields/HAM_Initiative__c.field-meta.xml
<CustomField>
    <fullName>HAM_Initiative__c</fullName>
    <label>Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1812</fullName>
            </value>
            <value>
                <fullName>Affinity Outreach</fullName>
            </value>
            <value>
                <fullName>Alumni Council</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Calendar Year End</fullName>
            </value>
            <value>
                <fullName>Class Outreach</fullName>
            </value>
            <value>
                <fullName>DEI</fullName>
            </value>
            <value>
                <fullName>Donor Reporting</fullName>
            </value>
            <value>
                <fullName>Fall Lead</fullName>
            </value>
            <value>
                <fullName>Fiscal Year End</fullName>
            </value>
            <value>
                <fullName>Give Day</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>HCN</fullName>
            </value>
            <value>
                <fullName>Honor Roll</fullName>
            </value>
            <value>
                <fullName>JBA</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Reunion</fullName>
            </value>
            <value>
                <fullName>Senior Gift</fullName>
            </value>
            <value>
                <fullName>Spring Lead</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Glade &amp; Glen</fullName>
                <isActive>false</isActive>
                <label>Glade &amp; Glen</label>
            </value>
            <value>
                <fullName>WIN</fullName>
                <isActive>false</isActive>
                <label>WIN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>