force-app/main/default/objects/Campaign/fields/HAM_Match__c.field-meta.xml
<CustomField>
    <fullName>HAM_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match</label>
    <type>Checkbox</type>
</CustomField>