force-app/main/default/objects/Campaign/fields/HAM_Match_Description__c.field-meta.xml
<CustomField>
    <fullName>HAM_Match_Description__c</fullName>
    <label>Match Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>