force-app/main/default/objects/Campaign/fields/HAM_Number_Donors_Total__c.field-meta.xml
<CustomField>
    <fullName>HAM_Number_Donors_Total__c</fullName>
    <label># Donors Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>