force-app/main/default/objects/Campaign/fields/HAM_Number_of_Clicked_CTA_Button__c.field-meta.xml
<CustomField>
    <fullName>HAM_Number_of_Clicked_CTA_Button__c</fullName>
    <label># of Clicked CTA Button</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>