force-app/main/default/objects/Campaign/fields/HAM_Number_of_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Number_of_Emails_Sent__c</fullName>
    <label># of Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>