force-app/main/default/objects/Campaign/fields/HAM_Number_Solicited_Graduates__c.field-meta.xml
<CustomField>
    <fullName>HAM_Number_Solicited_Graduates__c</fullName>
    <label># Solicited Graduates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>