force-app/main/default/objects/Campaign/fields/HAM_Participation_Rate__c.field-meta.xml
<CustomField>
    <fullName>HAM_Participation_Rate__c</fullName>
    <label>Participation Rate</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>