force-app/main/default/objects/Campaign/fields/HAM_Preferred_Class__c.field-meta.xml
<CustomField>
    <fullName>HAM_Preferred_Class__c</fullName>
    <label>Preferred Class</label>
    <length>2</length>
    <type>Text</type>
</CustomField>