force-app/main/default/objects/Campaign/fields/HAM_Previous_Donor_Status_3_5__c.field-meta.xml
<CustomField>
    <fullName>HAM_Previous_Donor_Status_3_5__c</fullName>
    <label>Previous Donor Status:Sybunt 3/5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>