force-app/main/default/objects/Campaign/fields/HAM_Previous_Donor_Status_NonDonor__c.field-meta.xml
<CustomField>
    <fullName>HAM_Previous_Donor_Status_NonDonor__c</fullName>
    <label>Previous Donor Status: NonDonor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>