force-app/main/default/objects/Campaign/fields/HAM_Purpose__c.field-meta.xml
<CustomField>
    <fullName>HAM_Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cultivation</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Solicitation</fullName>
            </value>
            <value>
                <fullName>Stewardship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>