force-app/main/default/objects/Campaign/fields/HAM_Solicited_Total__c.field-meta.xml
<CustomField>
    <fullName>HAM_Solicited_Total__c</fullName>
    <label># Solicited Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>