force-app/main/default/objects/Campaign/fields/HAM_Total_Collected_Dollars__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Collected_Dollars__c</fullName>
    <label>Total Collected Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>