force-app/main/default/objects/Campaign/fields/HAM_Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Ultimate_Parent__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.ParentId)),Parent.Parent.Name,
IF(NOT(ISBLANK(ParentId)) ,Parent.Name,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent</label>
    <type>Text</type>
</CustomField>