force-app/main/default/objects/Campaign/fields/HAMTotal_Hamilton_Fund_Collected_Dollars__c.field-meta.xml
<CustomField>
    <fullName>HAMTotal_Hamilton_Fund_Collected_Dollars__c</fullName>
    <label>Total Hamilton Fund Collected Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>