force-app/main/default/objects/Campaign/fields/SMS_Supported__c.field-meta.xml
<CustomField>
    <fullName>SMS_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS_Supported</label>
    <type>Checkbox</type>
</CustomField>