force-app/main/default/objects/Campaign/fields/X1812_Aquired__c.field-meta.xml
<CustomField>
    <fullName>X1812_Aquired__c</fullName>
    <label>1812 Aquired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>