force-app/main/default/objects/Campaign/recordTypes/Communications.recordType-meta.xml
<RecordType>
    <fullName>Communications</fullName>
    <active>true</active>
    <description>Used for marketing and communication outreach</description>
    <label>Communications</label>
</RecordType>