force-app/main/default/objects/Campaign/recordTypes/List.recordType-meta.xml
<RecordType>
    <fullName>List</fullName>
    <active>true</active>
    <description>Static Lists</description>
    <label>List</label>
</RecordType>