force-app/main/default/objects/Campaign/recordTypes/Subscriptions.recordType-meta.xml
<RecordType>
    <fullName>Subscriptions</fullName>
    <active>true</active>
    <description>This record type is used to represent unique Subscriptions as they appear on the SFMC Subscription Center.</description>
    <label>Subscriptions</label>
</RecordType>