force-app/main/default/objects/Campaign/recordTypes/Year_End_Retrospective.recordType-meta.xml
<RecordType>
    <fullName>Year_End_Retrospective</fullName>
    <active>true</active>
    <label>Retrospective</label>
</RecordType>