force-app/main/default/objects/Campaign/validationRules/Fiscal_Year_Needs_to_Be_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Fiscal_Year_Needs_to_Be_Numbers</fullName>
    <active>true</active>
    <description>Fiscal Year can only be numbers</description>
    <errorConditionFormula>AND (NOT(ISNUMBER(HAM_Fiscal_Year__c)),
(RecordType.DeveloperName = &quot;Appeal&quot;))</errorConditionFormula>
    <errorDisplayField>HAM_Fiscal_Year__c</errorDisplayField>
    <errorMessage>Please make sure you are only entering numbers for Fiscal Year</errorMessage>
</ValidationRule>